--- a/projectMobile_Desktop/src/index.html
+++ b/projectMobile_Desktop/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <main>
-            <img src="#" alt="Pazioli">
+            <img src="../image/pazioli.png" alt="Pazioli">
         </main>
         <nav>
             <ul>
