--- a/projectMobile_Desktop/src/index.html
+++ b/projectMobile_Desktop/src/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <header>
-        <main>
-            <img src="../image/pazioli.png" alt="Pazioli">
-        </main>
+        <img class="image1" src="../image/pazioli.png" alt="Pazioli">
+
         <nav>
             <ul>
                 <li><a href="#"> Home </a></li>
                 <li><a href="#"> Pianos </a></li>
                 <li><a href="#"> Soy estudiante </a></li>
-                <li><a href="#"> Contactos </a></li>
-                <li><a href="#"><i> Icon </i></a></li>
+                <li><a href="#"> Contáctatos </a></li>
             </ul>
+            <a href=""><img class="image2" src="../icons/cart.png" alt=""></a>
+
         </nav>
+
     </header>
 
     <main>
