--- a/projectMobile_Desktop/src/index.html
+++ b/projectMobile_Desktop/src/index.html
@@ -75,42 +75,64 @@
             <div class="pianos__3">
             <ul>
             <li><article>
-                <img src="../image/whitePiano.png" alt="Piano blanco">
-                <h6>The butterfly</h6>
+                <div class="box">
+                    <img class="image__piano" src="../image/whitePiano.png" alt="Piano blanco">
+                    <div class="content">    
+
+                <h2>The butterfly</h2>
                 <ul>
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
                     <li>M. Cetro</li>
                 </ul>
-                <div>Desde: $195k mn</div>
-                <a href="#"><i>Carrito</i></a>
+                <div class="precio">
+                    <p>Desde: $195k mn</p>
+                    <a href="#"><img src="../icons/cart2.png" alt="carrito"></a>
+
+                </div>
+                </div>
+                </div>
             </article></li>
 
             <li><article>
-                <img src="../image/goldPiano.png" alt="Piano Gold">
-                <h6>Golden Leaf</h6>
+                <div class="box">
+                        <img class="image__piano" src="../image/goldPiano.png" alt="Piano Gold">
+                    <div class="content">    
+                <h2>Golden Leaf</h2>
                 <ul>
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
                     <li>M. Cetro</li>
                 </ul>
-                <div>Desde: $305k mn</div>
-                <a href="#"><i>Carrito</i></a>
+                <div class="precio">
+                    <p> $305k mn</p>
+                    <a href="#"><img src="../icons/cart2.png" alt="carrito"></a>
+
+                </div>
+                    </div>
+                </div>
             </article></li>
 
             <li><article>
-                <img src="../image/brownPiano2.png" alt="Piano Brown">
-                <h6>Walnut Strauss</h6>
+                <div class="box">  
+                    <img class="image__piano" src="../image/brownPiano2.png" alt="Piano Brown">
+                    <div class="content">    
+                <h2>Walnut Strauss</h2>
                 <ul>
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
                     <li>M. Cetro</li>
                 </ul>
-                <div>Desde: $125k mn</div>
-                <a href="#"><i>Carrito</i></a>
+                <div class="precio">
+                    <p>Desde: $125k mn</p>
+                    <a href="#"><img src="../icons/cart2.png" alt="carrito"></a>
+                </div>
+                
+                </div>
+                </div>
             </article></li>
         </ul>
       </div>
