--- a/projectMobile_Desktop/src/index.html
+++ b/projectMobile_Desktop/src/index.html
@@ -62,14 +62,13 @@
         </h1>
         <section class="section__main3">
             <div class="pianos__3">
-            <ul>
+            <ul class="list__Piano">
             <li><article>
                 <div class="box">
                     <img class="image__piano" src="../images/whitePiano.png" alt="Piano blanco">
                     <div class="content">    
-
                 <h2>The butterfly</h2>
-                <ul>
+                <ul class="list__tipo">
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
@@ -78,18 +77,17 @@
                 <div class="precio">
                     <p>Desde: $195k mn</p>
                     <a href="#"><img src="../images/carrito.png" alt="carrito"></a>
-
                 </div>
-                </div>
+                    </div>
                 </div>
             </article></li>
 
             <li><article>
                 <div class="box">
-                        <img class="image__piano" src="../images/goldPiano.png" alt="Piano Gold">
+                    <img class="image__piano" src="../images/goldPiano.png" alt="Piano Gold">
                     <div class="content">    
                 <h2>Golden Leaf</h2>
-                <ul>
+                <ul class="list__tipo">
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
@@ -98,7 +96,6 @@
                 <div class="precio">
                     <p> $305k mn</p>
                     <a href="#"><img src="../images/carrito.png" alt="carrito"></a>
-
                 </div>
                     </div>
                 </div>
@@ -109,7 +106,7 @@
                     <img class="image__piano" src="../images/brownPiano2.png" alt="Piano Brown">
                     <div class="content">    
                 <h2>Walnut Strauss</h2>
-                <ul>
+                <ul class="list__tipo">
                     <li>Nuevo</li>
                     <li>2021</li>
                     <li>Acustica</li>
@@ -119,7 +116,6 @@
                     <p>Desde: $125k mn</p>
                     <a href="#"><img src="../images/carrito.png" alt="carrito"></a>
                 </div>
-                
                 </div>
                 </div>
             </article></li>
